templates/staticresponce.yaml


apiVersion: v1
kind: Service
metadata:
  name: static-response
  namespace: backend
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - name: use-annotation
      port: 80
      targetPort: 80
