templates/backend-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sahil-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:947557066309:certificate/8b2350e9-30c6-4ec4-bf9b-4b766562edf4

spec:
  ingressClassName: alb
  rules:
    - host: nodejs.sahil.virals.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-backend-service
                port:
                  number: 80
